# autogen_projects

./: agents_in_autogen.ipynb  agents_teams.ipynb  first_agent.ipynb  main.py  multimodels_autogen.ipynb  pyproject.toml
